; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_jv-lang.c__initialize_java_language.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_jv-lang.c__initialize_java_language.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TYPE_CODE_INT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"int\00", align 1
@java_int_type = common dso_local global i8* null, align 8
@.str.1 = private unnamed_addr constant [6 x i8] c"short\00", align 1
@java_short_type = common dso_local global i8* null, align 8
@.str.2 = private unnamed_addr constant [5 x i8] c"long\00", align 1
@java_long_type = common dso_local global i8* null, align 8
@.str.3 = private unnamed_addr constant [5 x i8] c"byte\00", align 1
@java_byte_type = common dso_local global i8* null, align 8
@TYPE_CODE_BOOL = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [8 x i8] c"boolean\00", align 1
@java_boolean_type = common dso_local global i8* null, align 8
@TYPE_CODE_CHAR = common dso_local global i32 0, align 4
@TYPE_FLAG_UNSIGNED = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [5 x i8] c"char\00", align 1
@java_char_type = common dso_local global i8* null, align 8
@TYPE_CODE_FLT = common dso_local global i32 0, align 4
@.str.6 = private unnamed_addr constant [6 x i8] c"float\00", align 1
@java_float_type = common dso_local global i8* null, align 8
@.str.7 = private unnamed_addr constant [7 x i8] c"double\00", align 1
@java_double_type = common dso_local global i8* null, align 8
@TYPE_CODE_VOID = common dso_local global i32 0, align 4
@.str.8 = private unnamed_addr constant [5 x i8] c"void\00", align 1
@java_void_type = common dso_local global i8* null, align 8
@java_language_defn = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_initialize_java_language() #0 {
  %1 = load i32, i32* @TYPE_CODE_INT, align 4
  %2 = call i8* @init_type(i32 %1, i32 4, i32 0, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32* null)
  store i8* %2, i8** @java_int_type, align 8
  %3 = load i32, i32* @TYPE_CODE_INT, align 4
  %4 = call i8* @init_type(i32 %3, i32 2, i32 0, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i32* null)
  store i8* %4, i8** @java_short_type, align 8
  %5 = load i32, i32* @TYPE_CODE_INT, align 4
  %6 = call i8* @init_type(i32 %5, i32 8, i32 0, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i32* null)
  store i8* %6, i8** @java_long_type, align 8
  %7 = load i32, i32* @TYPE_CODE_INT, align 4
  %8 = call i8* @init_type(i32 %7, i32 1, i32 0, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0), i32* null)
  store i8* %8, i8** @java_byte_type, align 8
  %9 = load i32, i32* @TYPE_CODE_BOOL, align 4
  %10 = call i8* @init_type(i32 %9, i32 1, i32 0, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.4, i64 0, i64 0), i32* null)
  store i8* %10, i8** @java_boolean_type, align 8
  %11 = load i32, i32* @TYPE_CODE_CHAR, align 4
  %12 = load i32, i32* @TYPE_FLAG_UNSIGNED, align 4
  %13 = call i8* @init_type(i32 %11, i32 2, i32 %12, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.5, i64 0, i64 0), i32* null)
  store i8* %13, i8** @java_char_type, align 8
  %14 = load i32, i32* @TYPE_CODE_FLT, align 4
  %15 = call i8* @init_type(i32 %14, i32 4, i32 0, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.6, i64 0, i64 0), i32* null)
  store i8* %15, i8** @java_float_type, align 8
  %16 = load i32, i32* @TYPE_CODE_FLT, align 4
  %17 = call i8* @init_type(i32 %16, i32 8, i32 0, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.7, i64 0, i64 0), i32* null)
  store i8* %17, i8** @java_double_type, align 8
  %18 = load i32, i32* @TYPE_CODE_VOID, align 4
  %19 = call i8* @init_type(i32 %18, i32 1, i32 0, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.8, i64 0, i64 0), i32* null)
  store i8* %19, i8** @java_void_type, align 8
  %20 = call i32 @add_language(i32* @java_language_defn)
  ret void
}

declare dso_local i8* @init_type(i32, i32, i32, i8*, i32*) #1

declare dso_local i32 @add_language(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
